[package]
name = "svql_driver"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
lazy_static.workspace = true
rstest.workspace = true

[dependencies]
svql_common.workspace = true
svql_subgraph.workspace = true

thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
tempfile.workspace = true
which.workspace = true
contracts.workspace = true

prjunnamed-netlist.workspace = true
prjunnamed-yosys_json.workspace = true

