[package]
name = "svql_driver"
version = "0.1.0"
edition = "2024"

[build-dependencies]
###############
# SVQL
###############
svql_common.workspace = true

###############
# OTHER LIBRARIES
###############
regex.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
lazy_static.workspace = true
tracing-subscriber.workspace = true
rstest.workspace = true

[dependencies]
###############
# SVQL
###############
svql_common.workspace = true
svql_subgraph.workspace = true

###############
# PRJUNNAMED
###############
prjunnamed-netlist.workspace = true
prjunnamed-yosys_json.workspace = true

###############
# OTHER LIBRARIES
###############
ahash.workspace = true
thiserror.workspace = true
tracing.workspace = true
tempfile.workspace = true
which.workspace = true
contracts.workspace = true
ouroboros.workspace = true

[lints]
workspace = true

