[package]
name = "svql_macros"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
proc-macro-error.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
