[package]
name = "svql_query"
version = "0.1.0"
edition = "2024"

[lib]

[dev-dependencies]
rstest.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
regex.workspace = true
walkdir.workspace = true

[dependencies]
svql_driver.workspace = true
svql_subgraph.workspace = true
svql_common.workspace = true

# ---------------------
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
tracing.workspace = true
itertools.workspace = true
regex.workspace = true
unstringify.workspace = true
walkdir.workspace = true
contracts.workspace = true

# ---------------------
prjunnamed-netlist.workspace = true