[package]
name = "svql_query"
edition = "2024"
version = "0.1.0"

[lib]



[dependencies]
###############
# SVQL
###############
svql_common.workspace = true
svql_driver.workspace = true
svql_subgraph.workspace = true

###############
# PRJUNNAMED
###############
prjunnamed-netlist.workspace = true

###############
# OTHER LIBRARIES
###############
contracts.workspace = true
itertools.workspace = true
lazy_static.workspace = true
rayon = { workspace = true, optional = true }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unstringify.workspace = true
walkdir.workspace = true

[build-dependencies]
###############
# SVQL
###############
svql_common.workspace = true

###############
# OTHER LIBRARIES
###############
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn.workspace = true
walkdir.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
rstest.workspace = true

[features]
default = []
rayon = ["dep:rayon"]