[package]
name = "svql_query"
edition = "2024"
version = "0.1.0"

[lib]



[dependencies]
###############
# SVQL
###############
svql_common.workspace = true
svql_driver.workspace = true
svql_subgraph.workspace = true
svql_macros.workspace = true

###############
# PRJUNNAMED
###############
prjunnamed-netlist.workspace = true

###############
# OTHER LIBRARIES
###############
ahash.workspace = true
contracts.workspace = true
itertools.workspace = true
lazy_static.workspace = true
polars.workspace = true
rayon = { workspace = true, optional = true }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unstringify.workspace = true
walkdir.workspace = true
argparse.workspace = true
# polars-core.workspace = true

[build-dependencies]
###############
# SVQL
###############
svql_common.workspace = true

###############
# OTHER LIBRARIES
###############
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn.workspace = true
walkdir.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
rstest.workspace = true

[features]
default = []
parallel = ["dep:rayon"]

[lints]
workspace = true

