[package]
name = "svql_query_proc_macro"
version = "0.1.0"
edition = "2021"
authors = [ "nick <nickrallison1@gmail.com>" ]

[lib]
proc-macro = true

[dependencies]
syn = { version = "~1.0", features = ["full"] }
quote = "~1.0"
proc-macro2 = "~1.0"
proc-macro-error = "~1.0"
svql_pat         = { path = "../svql_pat" }      # <-- build–time dependency
svql_common      = { path = "../svql_common" }

[dev-dependencies]
trybuild = "~1.0"
