[package]
name = "svql_subgraph"
edition.workspace = true
version.workspace = true
# license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[build-dependencies]
###############
# SVQL
###############
svql_common.workspace = true

###############
# OTHER LIBRARIES
###############
contracts.workspace = true
regex.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dependencies]
###############
# SVQL
###############
svql_common.workspace = true

###############
# PRJUNNAMED
###############
prjunnamed-netlist.workspace = true
prjunnamed-yosys_json.workspace = true

###############
# OTHER LIBRARIES
###############
gxhash.workspace = true
dashmap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
which.workspace = true
contracts.workspace = true
itertools.workspace = true
rayon = { workspace = true, optional = true }

[dev-dependencies]
svql_common.workspace = true
svql_driver.workspace = true
lazy_static.workspace = true
rstest.workspace = true
quickcheck.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
profiling = []
rayon = ["dep:rayon"]

[lints]
workspace = true


